--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 -->
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<title>稻谷熟了平台 - 商家官方权威注册页</title>
-        <meta name="keywords" content="稻谷熟了,稻谷熟了平台,稻谷熟了补单,稻谷熟了App,专业打造爆款,淘宝销量提高,商家放单,商家补单">
-		<meta name="description" content="稻谷熟了平台—诚信电商销量提升服务的平台，降权包赔，现金赔付！费用10元起！！多渠道打造爆款，商家可自定义需求，用数据告诉你效果，拥有专业的运营团队，为您提供一站式的排名权重提升服务">
+		<title>稻谷熟了（米花香）平台 - 商家官方权威注册页</title>
+			<meta name="description" content="邀请码：88377 稻谷熟了补单平台是诚信电商销量提升服务的平台,团队有多年专业电商运营经验，单年操盘千万销售额，带领团队成功操作线上400家过百万级店铺，深谙电商痛点，打造属于你的未来旺铺。">
+        <meta name="keywords" content="米花香,米花香平台,米花香补单平台,米花香补单,稻谷熟了,稻谷熟了平台,稻谷熟了补单,稻谷熟了App,专业打造爆款,淘宝销量提高,商家放单,商家补单">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="static/css/main.css">
@@ -20,15 +20,15 @@
 			<section id="banner">
 				<h2><strong>稻谷熟了平台- </strong>官方权威注册</h2>
 				<p> 专注 淘宝 天猫 补单 </p>
-			    <p> 支持商家自主返款 </p>
+			    <p> 官方邀请码：88377 </p>
 				<p>超级精准授权查号，质量安全性高！</p>
                 <p> 微信主管客服：13230292887 </p>
                 <p> 建议商家朋友使用谷歌浏览器，或者QQ浏览器。其他的不兼容哦  </p>
 				<ul class="actions">
                                    
-                                    <li><a class="button special" href="http://www.jiaxingqifu.cn:5555">商家登录地址</a></li>
-                                    <li><a class="button special" href="http://www.jiaxingqifu.cn:5555/sign?cardid=73399262">商家注册地址</a></li>
-                                    <li><a class="button special" href="http://www.jiaxingqifu.cn:5555/sign?cardid=73399262">商家邀请码：73399262</a></li>
+                                    <li><a class="button special" href="http://kxc.lan789.com">商家登录地址</a></li>
+                                    <li><a class="button special" href="http://kxc.lan789.com/user/register/index/tUid/88377.html">商家注册地址</a></li>
+                                    <li><a class="button special" href="http://kxc.lan789.com/user/register/index/tUid/88377.html">商家邀请码：88377</a></li>
 				</ul>
 			</section>
 
@@ -196,7 +196,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					© 稻谷熟了平台 <a href="http://www.jiaxingqifu.cn:5555/sign?cardid=73399262">免费注册</a>.
+					© 稻谷熟了平台 <a href="http://kxc.lan789.com/user/register/index/tUid/88377.html">免费注册</a>.
 				</div>
 			</footer>
 
