更新赚米米邀请链接

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 			    <p> 官方邀请码：88377 </p>
 				<ul class="actions">
                                    
-                                    <li><a class="button special" href="http://kxc.lan789.com">商家登录地址</a></li>
-                                    <li><a class="button special" href="http://kxc.lan789.com/user/register/index/tUid/88377.html">商家注册地址</a></li>
-                                    <li><a class="button special" href="http://kxc.lan789.com/user/register/index/tUid/88377.html">商家邀请码：88377</a></li>
+                                    <li><a class="button special" href="http://zmm.caiwenji069.com">商家登录地址</a></li>
+                                    <li><a class="button special" href="http://zmm.caiwenji069.com/user/register/index/tUid/88377.html">商家注册地址</a></li>
+                                    <li><a class="button special" href="http://zmm.caiwenji069.com/user/register/index/tUid/88377.html">商家邀请码：88377</a></li>
 				</ul>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					© 赚米米平台 <a href="http://kxc.lan789.com/user/register/index/tUid/88377.html">免费注册</a>.
+					© 赚米米平台 <a href="http://zmm.caiwenji069.com/user/register/index/tUid/88377.html">免费注册</a>.
 				</div>
 			</footer>
 
